# engram-retention

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: README.md
.github/workflows/: README.md  ci.yml
analysis/: README.md
analysis/notebooks/: README.md  generate_academic_plots.py  generate_advanced_plots.py  generate_local_pressure_plots.py  generate_ordered_pressure_plots.py  generate_rerun_old_plots.py
docs/: README.md  architecture_summary_and_deviations.md  architecture_vulnerabilities.md  open-source-codex-application.md
docs/architecture/: current_model_architecture_2026-05-11.md  phase1-validation-report.md
docs/methodology/: README.md  research_protocol.md
docs/progress/: 2026-05-03-proof-kickoff.md  2026-05-04-external-review-response.md  2026-05-04-synthetic-snapshot-ablation.md  2026-05-11-engram-offload-brainstorm.md  2026-05-12-arc-review-and-debugging.md  2026-05-12-goal-gap-and-bottleneck-brainstorm.md  README.md
docs/proofs/: 01-gradient-interference.md  02-conditional-nondecay-gradient-proof.md  03-engram-hash-capacity-proof.md  04-engram-residual-perturbation-proof.md  05-budgeted-gate-stability-proof.md  06-total-gradient-dominance-proof.md  README.md  (+34 more)
experiments/: README.md  _run_curriculum3.py  eval_chunked.py  eval_context_scaling.py  probe_copy_alignment.py  probe_internal_heatmaps.py  probe_runtime.py  run_ordered_pressure_tests.py  train_synthetic.py
papers/: README.md
references/: README.md
src/: README.md  __init__.py
tests/: README.md  test_aligned_architecture.py  test_budget_contracts.py  test_recurrent_step.py  test_retention.py
(+30 files in other folders)
