[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "engram-retention-research"
version = "0.1.0"
description = "PyTorch research scaffold for RetNet, Block Attention Residuals, and hashed Engram memory."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC-BY-4.0" }
authors = [{ name = "Xingyu Xie" }]
keywords = ["retnet", "attention-residual", "engram", "long-context", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "einops>=0.7.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]
tracking = [
    "wandb>=0.16.0",
    "tensorboard>=2.14.0",
]
notebook = [
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/XXY-CH/engram-retention"
Repository = "https://github.com/XXY-CH/engram-retention"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"experiments/train_synthetic.py" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py310"]
